[project]
name = "flydra_core"
version = "0.7.14"  # keep in sync with flydra_core/version.py
description = "flydra mainbrain and core lib"
readme = "README.md"
requires-python = ">= 3.7"
#license.file = "LICENSE-MIT" and "LICENSE-APACHE"
authors = [{ name = "Andrew Straw", email = "strawman@astraw.com" }]
maintainers = [{ name = "Andrew Straw", email = "strawman@astraw.com" }]

urls.homepage = "https://github.com/strawlab/flydra"

[project.scripts]
# camera calibration
flydra_analysis_align_calibration = "flydra_core.reconstruct:align_calibration"
flydra_analysis_print_cam_centers = "flydra_core.reconstruct:print_cam_centers"
flydra_analysis_flip_calibration = "flydra_core.reconstruct:flip_calibration"

[build-system]
# following advice in https://stackoverflow.com/a/66479252
requires = [
    "setuptools>=61",
    "cython>=3.0",
    "numpy",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--doctest-ignore-import-errors"]
python_files = ["flydra_core/align.py", "flydra_core/test_refraction.py",
    "flydra_core/geom.py", "flydra_core/reconstruct.py",
    "flydra_core/kalman.py", "flydra_core/kalman/flydra_tracker.py"]
